--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -2,5 +2,8 @@
   "lang": "简体中文",
   "voice_button": "语音输入",
   "daily_balance": "日账单",
-  "monthly_balance": "月账单"
+  "monthly_balance": "月账单",
+
+
+  "intl_calendar_strip_title": "{{ val, datetime(year: 'numeric') }}{{ val, datetime(month: 'long') }} 第{{week}}周",
 }
