--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,8 +1,47 @@
 {
-  "lang": "简体中文",
-  "voice_button": "语音输入",
-  "daily_balance": "日账单",
-  "monthly_balance": "月账单",
-
-  "intl_calendar_strip_title": "{{ val, datetime(year: 'numeric') }}{{ val, datetime(month: 'long') }} 第{{week}}周"
+  "button": {
+    "submit": "提交"
+  },
+  "calendar": {
+    "weekday": {
+      "narrow": "{{ val, datetime(weekday: 'narrow') }}"
+    },
+    "strip": {
+      "title": "第{{ week}}周 {{ val, datetime(year: 'numeric') }}{{ val, datetime(month: 'long') }}"
+    }
+  },
+  "timeline_view": {
+    "title": "时间轴",
+    "placeholder": "今天没有任务。"
+  },
+  "expenses_view": {
+    "daily_balance": {
+      "title": "本日收支"
+    },
+    "monthly_balance": {
+      "title": "本月收支"
+    }
+  },
+  "home": {
+    "voice_button": "语音输入"
+  },
+  "preference": {
+    "theme": {
+      "label": "主题",
+      "values": {
+        "light": "浅色",
+        "dark": "深色",
+        "system": "跟随系统"
+      }
+    },
+    "language": {
+      "label": "语言",
+      "values": {
+        "en": "英语",
+        "zh-Hans": "简体中文",
+        "zh-Hant": "繁体中文",
+        "system": "跟随系统"
+      }
+    }
+  }
 }
