feat(i18n): add i18n for route labels

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -22,6 +22,15 @@
       "title": "Monthly"
     }
   },
+  "routes": {
+    "index": "Home",
+    "task": {
+      "list": "Tasks",
+      "create": "Create Tasks",
+      "update": "Update Tasks"
+    },
+    "preference": "Preferences"
+  },
   "home": {
     "voice_button": "Speak"
   },
