--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -33,6 +33,28 @@
       }
     }
   },
+  "txn_account_form": {
+    "name": {
+      "label": "Account Name"
+    },
+    "currency": {
+      "label": "Account Currency"
+    }
+  },
+  "txn_form": {
+    "account": {
+      "label": "Account"
+    },
+    "amount": {
+      "label": "Amount"
+    },
+    "date": {
+      "label": "Transaction Date"
+    },
+    "summary": {
+      "label": "Summary"
+    }
+  },
   "calendar": {
     "weekday": {
       "narrow": "{{ val, datetime(weekday: 'narrow') }}"
@@ -55,11 +77,9 @@
   },
   "routes": {
     "index": "Home",
-    "task": {
-      "list": "Tasks",
-      "create": "Create Tasks",
-      "update": "Update Tasks"
-    },
+    "task": "Tasks",
+    "task.create": "Create Tasks",
+    "task.update": "Update Tasks",
     "preference": "Preferences"
   },
   "preference": {
