--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,6 +1,7 @@
 {
   "button": {
-    "submit": "Submit"
+    "submit": "Submit",
+    "delete": "Delete"
   },
   "voice_button": {
     "label": "Create Tasks by Voice",
@@ -84,9 +85,11 @@
       "expanded": "Collaspe Calendar"
     }
   },
-  "timeline_view": {
-    "title": "Timeline",
-    "placeholder": "No tasks today."
+  "timetable": {
+    "task": {
+      "label": "{{ summary }}, from {{ plannedBegin, datetime(timeStyle: 'short')}} on {{ plannedBegin, datetime(weekday: 'long') }}, {{ plannedBegin, datetime(day: 'numeric') }}, {{ plannedBegin, datetime(month: 'long')}} to {{ plannedEnd, datetime(timeStyle: 'short')}} on {{ plannedEnd datetime(weekday: 'long') }}, {{ plannedEnd, datetime(day: 'numeric') }}, {{ plannedEnd, datetime(month: 'long')}}\n",
+      "label_sameday": "{{ summary }}, from {{ plannedBegin, datetime(timeStyle: 'short')}} to {{ plannedEnd, datetime(timeStyle: 'short')}} on {{ plannedBegin, datetime(weekday: 'long') }}, {{ plannedBegin, datetime(day: 'numeric') }}, {{ plannedBegin, datetime(month: 'long')}}\n"
+    }
   },
   "expenses_view": {
     "daily_balance": {
