--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -154,6 +154,9 @@
         "zh-CN": "Chinese (Mandarin)",
         "zh-HK": "Chinese (Cantonese)"
       }
+    },
+    "prefered_currency": {
+      "label": "Prefered Currency (3 Characters)"
     }
   }
 }
