feat(txn-form): check for account validity

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -45,7 +45,8 @@
   },
   "txn_form": {
     "account": {
-      "label": "Account"
+      "label": "Account",
+      "error": "Not a valid account"
     },
     "amount": {
       "label": "Amount"
