--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -14,6 +14,10 @@
     "accept": "Accept"
   },
   "task_form": {
+    "tab": {
+      "activity": "Activity",
+      "task": "Task"
+    },
     "summary": {
       "label": "Task Summary",
       "placeholder": "Enter task summary"
